# DeepSeek-OCR-examples

./: .gitignore  README.md  main.py  pyproject.toml
examples/: example1.py  run_dsp_vllm.py  setup.sh
